--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/decision/DecisionNavigatorView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/decision/DecisionNavigatorView.html
@@ -14,8 +14,51 @@
   ~ limitations under the License.
   -->
 
-<div data-field="view">
+<div>
     <div data-field="mini-map"></div>
-    <div data-field="main-tree"></div>
-    <div data-field="drd-tree"></div>
+
+    <div>
+        <div class="panel-group" id="decision-graphs-header">
+            <div class="panel panel-default">
+
+                <div class="panel-heading" data-component="collapse-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#decision-graphs-header" href="#decision-graphs-content">
+                            Decision Graphs
+                        </a>
+                    </h4>
+                </div>
+
+                <div id="decision-graphs-content" class="panel-collapse collapse in">
+                    <div class="panel-body">
+                        <div data-field="main-tree"></div>
+                        <div data-field="drd-tree"></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <div class="panel-group" id="decision-component-header">
+            <div class="panel panel-default">
+
+                <div class="panel-heading" data-component="collapse-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#decision-component-header" href="#decision-component-content">
+                            Decision Components
+                        </a>
+                    </h4>
+                </div>
+
+                <div id="decision-component-content" class="panel-collapse collapse in">
+                    <div class="panel-body">
+                        <div data-field="decision-components"></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
